<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_contacts"
        android:enabled="true"
        android:icon="@mipmap/ic_contacts_black"
        android:title="@string/text_contacts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_chat"
        android:enabled="true"
        android:icon="@mipmap/ic_chat_bubble_black"
        android:title="@string/text_caht"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@mipmap/ic_settings_black"
        android:title="@string/text_settings"
        app:showAsAction="ifRoom" />
</menu>